
Incremental changes are listed in the project’s [commit history](https://github.com/splorp/newton-glossary/commits/master).

Recently added terms and sources can be found on the [latest additions](/latest) page.

### _$v

Terms: _$t
Sources: _$s

#### Summary of changes:

+ Updated [Kirby](https://getkirby.com/) to version [4.1.2](https://github.com/getkirby/kirby/releases/tag/4.1.2)

### 3.1.3

19 March 2024

Terms: 1,374
Sources: 146

#### Summary of changes:

+ Added 2 new terms
+ Updated and expanded several existing entries
+ Updated [Kirby](https://getkirby.com/) to version [3.10.0.1](https://github.com/getkirby/kirby/releases/tag/3.10.0.1) for security patches

### 3.1.2

16 February 2024

Terms: 1,372
Sources: 146

#### Summary of changes:

+ Added 42 new terms
+ Added 6 new sources
+ Updated and expanded dozens of existing entries
+ Added descriptions to the [RSS feed](/latest/feed) for the [latest additions](/latest) page
+ Updated the [robots.txt](/robots.txt) file to exclude machine learning bots
+ Updated [Kirby](https://getkirby.com/) to version [3.10.0](https://github.com/getkirby/kirby/releases/tag/3.10.0) for [PHP 8.3](https://www.php.net/releases/8.3/en.php) support

### 3.1.1

01 January 2024

Terms: 1,330
Sources: 140

#### Summary of changes:

+ Added 25 new terms
+ Added 2 new sources
+ Updated and expanded dozens of existing entries
+ Updated [Kirby](https://getkirby.com/) to version [3.9.8](https://github.com/getkirby/kirby/releases/tag/3.9.8)

### 3.1.0

04 November 2023

Terms: 1,305
Sources: 138

#### Summary of changes:

+ Added 5 new terms
+ Added 1 new source
+ Updated and expanded dozens of existing entries
+ Moved “Additional Information” links to their own field for flexibility
+ Added [RSS feed](/latest/feed) for the [latest additions](/latest) page
+ Removed keywords from the page meta because [SEO ruined everything](https://ahrefs.com/blog/meta-keywords/)
+ Simplified the way the stylesheet is timestamped when modified