@@ -3,7 +3,7 @@
   "type": "kirby-plugin",
   "description": "Setup performant HTTP Status Code Redirects from within the Kirby Panel",
   "homepage": "https://github.com/bnomei/kirby3-redirects",
-  "version": "1.12.0",
+  "version": "4.2.0",
   "license": "MIT",
   "authors": [
     {
@@ -12,9 +12,9 @@
     }
   ],
   "keywords": [
-    "kirby3",
-    "kirby3-cms",
-    "kirby3-plugin",
+    "kirby",
+    "kirby-cms",
+    "kirby-plugin",
     "redirect",
     "301",
     "302",
@@ -25,7 +25,14 @@
     "redirects",
     "performance",
     "regex",
-    "placeholder"
+    "placeholder",
+    "protection",
+    "hack",
+    "dos",
+    "attack",
+    "shield",
+    "firewall",
+    "defense"
   ],
   "autoload": {
     "psr-4": {
@@ -59,13 +66,14 @@
     ]
   },
   "require": {
-    "php": ">=8.0",
+    "php": ">=8.1",
     "getkirby/composer-installer": "^1.2"
   },
   "require-dev": {
-    "getkirby/cms": "^3.5",
+    "getkirby/cms": "^4.1.0",
     "php-coveralls/php-coveralls": "^2.4",
-    "phpunit/phpunit": "^9.5"
+    "phpunit/phpunit": "^9.5",
+    "spatie/ray": "^1.41"
   },
   "extra": {
     "kirby-cms-path": "tests/kirby"
