@@ -1,8 +1,0 @@
-<?php
-
-namespace Pest;
-
-/**
-
- */
-final class Expectation {}
