@@ -2,7 +2,7 @@
 
 // autoload_real.php @generated by Composer
 
-class ComposerAutoloaderInitb6cc1529004ec5e8322f3866ff7b344e
+class ComposerAutoloaderInit870d16a27eb3cc49be839865ae605739
 {
     private static $loader;
 
@@ -24,12 +24,12 @@ class ComposerAutoloaderInitb6cc1529004ec5e8322f3866ff7b344e
 
         require __DIR__ . '/platform_check.php';
 
-        spl_autoload_register(array('ComposerAutoloaderInitb6cc1529004ec5e8322f3866ff7b344e', 'loadClassLoader'), true, true);
+        spl_autoload_register(array('ComposerAutoloaderInit870d16a27eb3cc49be839865ae605739', 'loadClassLoader'), true, true);
         self::$loader = $loader = new \Composer\Autoload\ClassLoader(\dirname(__DIR__));
-        spl_autoload_unregister(array('ComposerAutoloaderInitb6cc1529004ec5e8322f3866ff7b344e', 'loadClassLoader'));
+        spl_autoload_unregister(array('ComposerAutoloaderInit870d16a27eb3cc49be839865ae605739', 'loadClassLoader'));
 
         require __DIR__ . '/autoload_static.php';
-        call_user_func(\Composer\Autoload\ComposerStaticInitb6cc1529004ec5e8322f3866ff7b344e::getInitializer($loader));
+        call_user_func(\Composer\Autoload\ComposerStaticInit870d16a27eb3cc49be839865ae605739::getInitializer($loader));
 
         $loader->register(true);
 
